--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "shadcn": "^0.5.0",
     "@tailwindcss/vite": "^4.0.9",
     "framer-motion": "^12.4.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "shadcn": "^2.4.0-canary.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
