--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "shadcn": "^2.1.9",
-
-    "@tailwindcss/vite": "^4.0.9",
+    "@tailwindcss/vite": "^4.0.12",
     "framer-motion": "^12.4.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "shadcn": "^2.1.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -28,7 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.9",
+    "tailwindcss": "^4.0.12",
     "vite": "^6.2.0"
   }
 }
